# scripts

./: addsudo.py  alternatives.sh  alut.sh  ax.txt  build-sdk.sh  build.py  build2.py  build_engine.sh  clone-sdl.sh  convert.py  decode.py  fix-repos.sh  fixrepo.py  gcc-mv.sh  gcc-ver  imgui.sh  inject-alias.sh  install-all.sh  install-auto.sh  install-examples.sh  install-frameworks (Copy).sh  install-frameworks-bak.sh  install-frameworks.sh  install-gcc.sh  install-only-gcc.sh  install-vcpkg.sh  runlog.py  set-gcc.sh  update-gcc.sh  update-repos.sh  updater.py
sandbox/: CMakeLists.txt  build-clang.sh  build-gcc.py  build3.py  build_multi.py
